--- a/1.html
+++ b/1.html
@@ -17,7 +17,7 @@
 
   <br><br><br>
   <h4>I am a genius because it is genius. I'm hungry. <br>I am very hungry. sad. I hate going to a company. <br>This is really funny. <br>Work in tandem. When will the week end? <br>I hope Friday will come soon. <br>Because Friday is good.</h4>
-  <br><br><img src="a.jpg" width="700">
+  <br><br><img src="https://github.com/hongsiyam/web1/blob/master/a.jpg" width="700">
   <p>e-mail. hongsi2736@naver.com</p>
   </body>
 </html>
