--- a/2.html
+++ b/2.html
@@ -10,8 +10,8 @@
   <body>
   <ui>
     <li><strong><h3><a href="2.html" target="_self" title="product">PRODUCT</a></h3></strong></li>
-    <li><strong><h3><a href="3.html" target="_blank" title="graphic">GRAPHIC DESIGN</a></h3></strong></li>
-    <li><strong><h3><a href="4.html" target="_blank" title="space design">SPACE DESIGN</a></h3></strong></li>
+    <li><strong><h3><a href="3.html" target="_self" title="graphic">GRAPHIC DESIGN</a></h3></strong></li>
+    <li><strong><h3><a href="4.html" target="_parent" title="space design">SPACE DESIGN</a></h3></strong></li>
     <li><strong><h3><a href="1.html" target="_self" title="main">HOME</a></h3></strong></li>
   </ui>
 
