--- a/1.html
+++ b/1.html
@@ -5,6 +5,17 @@
   <head>
     <title>NARI PORTFOLIO 2018</title>
     <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117285295-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-117285295-1');
+</script>
+
+
     <p><h1>NARI PORTFOLIO 2018</h1></p>
   </head>
   <body>
